# omar-rq

./: .env  .gitignore  README.md  package_list.txt  pyproject.toml  rsync-exclude  rsync.sh
cfg/: config.gin  config_conformer.gin  config_conformer_encodec.gin  config_conformer_local.gin  config_masking.gin  config_masking0.gin  config_masking_conformer_big.gin  config_masking_conformer_huge.gin  config_masking_conformer_large.gin  config_masking_conformer_multiview_au_to_all_large.gin  config_masking_conformer_multiview_au_to_all_large_25hz.gin  config_masking_conformer_multiview_au_to_all_large_25hz_fsq.gin  config_masking_conformer_multiview_au_to_all_large_shuffle_mask.gin  config_masking_conformer_multiview_au_to_all_small.gin  config_masking_conformer_multiview_au_to_au_large.gin  config_masking_conformer_multiview_au_to_au_small.gin  config_masking_conformer_multiview_au_to_cqt_large.gin  config_masking_conformer_multiview_au_to_cqt_small.gin  config_masking_conformer_multiview_au_to_mel_small.gin  config_masking_conformer_multiview_enc_to_all_large.gin  config_masking_conformer_multiview_enc_to_all_small.gin  config_masking_conformer_multiview_enc_to_au_small.gin  config_masking_conformer_multiview_enc_to_auenccqt_large.gin  config_masking_conformer_multiview_enc_to_auenccqt_small.gin  config_masking_conformer_multiview_enc_to_auencmel_large.gin  config_masking_conformer_multiview_enc_to_aumelcqt_small.gin  config_masking_conformer_multiview_enc_to_encmelcqt_large.gin  config_masking_conformer_multiview_enc_to_encmelcqt_small.gin  config_masking_conformer_small.gin  config_masking_conformer_small_cqt.gin  config_masking_conformer_tiny.gin  (+15 more)
(+1241 files in other folders)
