[project]
version = "0.2.0"
name = "omar-rq"

requires-python = ">= 3.10"

dependencies = [
  "lightning==>=2.3,<3.0",
  "torch>=2.6,<3.0",
  "torchaudio>=2.6,<3.0",
  "gin-config>=0.5,<1.0",
  "einops>=0.8,<1.0",
  "transformers>=4.50,<5.0",
]

[project.optional-dependencies]
dev = ["ruff~=0.14", "pytest"]

train = [
  "bayesian_optimization~=1.5.1",
  "matplotlib",
  "scikit_learn~=1.5.2",
  "scipy~=1.14.1",
  "wandb",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
